# wtree

./: Cargo.toml  LICENSE  README.md
src/: config.rs  git.rs  gitignore.rs  hooks.rs  hooks_template.rs  main.rs  state.rs
src/commands/: clone.rs  create.rs  init.rs  list.rs  mod.rs  prune.rs  remove.rs  shell_init.rs  switch.rs
