[package]
name = "wtree"
version = "0.2.0"
edition = "2021"
description = "A git worktree wrapper for bare repositories"
license = "MIT"
repository = "https://github.com/imqdee/wtree"
homepage = "https://github.com/imqdee/wtree"
keywords = ["git", "worktree", "bare", "repository"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
